--- a/rendering/base.html
+++ b/rendering/base.html
@@ -32,16 +32,27 @@
 <script>
     {#- Custom method for using equals with checkboxes #}
     $.validator.addMethod("equalToCheckbox", function(value, element, params) {
-        if ($(params).is(":checked") == $(element).is(":checked"))
+        if ($(element).is(":checked") == $(params).is(":checked"))
             return true;
         return false;
     }, "Message" );
 
-    {#- Disabled fields are not validated #}
+    {#- Custom method notEqualTo #}
+    $.validator.addMethod("notEqualTo", function(value, element, params) {
+        if (this.optional(element) == true)
+            return true;
+        if ($(element).attr("type") == "checkbox")
+            return $(element).is(":checked") == $(params).is(":checked") ? false : true;
+        else
+            return $(element).val() == $(params).val() ? false : true;
+    }, "Message" );
+
+    {#- Used to automatically add custom rules to relevant elements. Disabled fields are not validated #}
     $("#form").validate({
         ignore: ":input[disabled]",
         equalTo: ":input[equalTo]",
-        equalToCheckbox: ":input[equalToCheckbox]"
+        equalToCheckbox: ":input[equalToCheckbox]",
+        notEqualTo: ":input[notEqualTo]"
     });
 
     {#- Add pattern rule #}
@@ -73,6 +84,15 @@
         $(this).rules("add", {
             messages: {
                 equalToCheckbox: $.validator.format("Must be equal to {0}",$($(this).attr("equalToCheckbox")).attr("label"))
+            }
+        });
+    });
+
+    {#- Sets the message for notEqualTo validation #}
+    $(":input[notEqualTo]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                notEqualTo: $.validator.format("Must not be equal to {0}",$($(this).attr("notEqualTo")).attr("label"))
             }
         });
     });
