Added support for sh:lessThan Added jQuery validation. Can't rely on hotlinking anymore since the lessThan and lessThanEquals rules aren't in the latest release.

--- a/rendering/base.html
+++ b/rendering/base.html
@@ -27,8 +27,8 @@
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/additional-methods.js"></script>
+<script src="jquery-validation/jquery.validate.js"></script>
+<script src="jquery-validation/additional-methods.js"></script>
 <script>
     {#- Custom method for using equals with checkboxes #}
     $.validator.addMethod("equalToCheckbox", function(value, element, params) {
@@ -52,7 +52,8 @@
         ignore: ":input[disabled]",
         equalTo: ":input[equalTo]",
         equalToCheckbox: ":input[equalToCheckbox]",
-        notEqualTo: ":input[notEqualTo]"
+        notEqualTo: ":input[notEqualTo]",
+        lessThan: ":input[lessThan]"
     });
 
     {#- Add pattern rule #}
@@ -93,6 +94,15 @@
         $(this).rules("add", {
             messages: {
                 notEqualTo: $.validator.format("Must not be equal to {0}",$($(this).attr("notEqualTo")).attr("label"))
+            }
+        });
+    });
+
+    {#- Sets the message for lessThan validation #}
+    $(":input[lessThan]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                lessThan: $.validator.format("Must be less than {0}",$($(this).attr("lessThan")).attr("label"))
             }
         });
     });
