Added support for sh:lessThanOrEquals

--- a/rendering/base.html
+++ b/rendering/base.html
@@ -53,7 +53,8 @@
         equalTo: ":input[equalTo]",
         equalToCheckbox: ":input[equalToCheckbox]",
         notEqualTo: ":input[notEqualTo]",
-        lessThan: ":input[lessThan]"
+        lessThan: ":input[lessThan]",
+        lessThanEqual: ":input[lessThanEqual]"
     });
 
     {#- Add pattern rule #}
@@ -103,6 +104,15 @@
         $(this).rules("add", {
             messages: {
                 lessThan: $.validator.format("Must be less than {0}",$($(this).attr("lessThan")).attr("label"))
+            }
+        });
+    });
+
+    {#- Sets the message for lessThanEquals validation #}
+    $(":input[lessThanEqual]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                lessThan: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
             }
         });
     });
