--- a/rendering/property.html
+++ b/rendering/property.html
@@ -45,5 +45,6 @@
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
 {%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
-{%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %} />
+{%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
+{%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %} />
 {%- endif %}<br />
