--- a/rendering/base.html
+++ b/rendering/base.html
@@ -54,7 +54,8 @@
         equalToCheckbox: ":input[equalToCheckbox]",
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
-        lessThanEqual: ":input[lessThanEqual]"
+        lessThanEqual: ":input[lessThanEqual]",
+        greaterThan: ":input[greaterThan]"
     });
 
     {#- Add pattern rule #}
@@ -112,7 +113,16 @@
     $(":input[lessThanEqual]").each(function(index) {
         $(this).rules("add", {
             messages: {
-                lessThan: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
+                lessThanEqual: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
+            }
+        });
+    });
+
+    {#- Sets the message for greaterThan validation #}
+    $(":input[greaterThan]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                greaterThan: $.validator.format("Must be greater than {0}",$($(this).attr("greaterThan")).attr("label"))
             }
         });
     });
