Added support for sh:greaterThanOrEquals

--- a/tests/expected_results/empty_shape.html
+++ b/tests/expected_results/empty_shape.html
@@ -35,7 +35,8 @@
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
         lessThanEqual: ":input[lessThanEqual]",
-        greaterThan: ":input[greaterThan]"
+        greaterThan: ":input[greaterThan]",
+        greaterThanEqual: ":input[greaterThanEqual]"
     });
     $(":input[equalTo]").each(function(index) {
         $(this).rules("add", {
@@ -74,6 +75,13 @@
         $(this).rules("add", {
             messages: {
                 greaterThan: $.validator.format("Must be greater than {0}",$($(this).attr("greaterThan")).attr("label"))
+            }
+        });
+    });
+    $(":input[greaterThanEqual]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                greaterThanEqual: $.validator.format("Must be greater than or equal to {0}",$($(this).attr("greaterThanEqual")).attr("label"))
             }
         });
     });
