--- a/rendering/base.html
+++ b/rendering/base.html
@@ -55,7 +55,8 @@
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
         lessThanEqual: ":input[lessThanEqual]",
-        greaterThan: ":input[greaterThan]"
+        greaterThan: ":input[greaterThan]",
+        greaterThanEqual: ":input[greaterThanEqual]"
     });
 
     {#- Add pattern rule #}
@@ -123,6 +124,15 @@
         $(this).rules("add", {
             messages: {
                 greaterThan: $.validator.format("Must be greater than {0}",$($(this).attr("greaterThan")).attr("label"))
+            }
+        });
+    });
+
+    {#- Sets the message for greaterThanEquals validation #}
+    $(":input[greaterThanEqual]").each(function(index) {
+        $(this).rules("add", {
+            messages: {
+                greaterThanEqual: $.validator.format("Must be greater than or equal to {0}",$($(this).attr("greaterThanEqual")).attr("label"))
             }
         });
     });
