--- a/rendering/base.html
+++ b/rendering/base.html
@@ -55,8 +55,7 @@
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
         lessThanEqual: ":input[lessThanEqual]",
-        greaterThan: ":input[greaterThan]",
-        greaterThanEqual: ":input[greaterThanEqual]"
+        greaterThan: ":input[greaterThan]"
     });
 
     {#- Add pattern rule #}
@@ -124,15 +123,6 @@
         $(this).rules("add", {
             messages: {
                 greaterThan: $.validator.format("Must be greater than {0}",$($(this).attr("greaterThan")).attr("label"))
-            }
-        });
-    });
-
-    {#- Sets the message for greaterThanEquals validation #}
-    $(":input[greaterThanEqual]").each(function(index) {
-        $(this).rules("add", {
-            messages: {
-                greaterThanEqual: $.validator.format("Must be greater than or equal to {0}",$($(this).attr("greaterThanEqual")).attr("label"))
             }
         });
     });
