--- a/rendering/property.html
+++ b/rendering/property.html
@@ -47,6 +47,5 @@
 {%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
 {%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
 {%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %}
-{%- if "greaterThan" in property %} greaterThan="#{{ property["greaterThan"] }}"{% endif %}
-{%- if "greaterThanOrEquals" in property %} greaterThanEqual="#{{ property["greaterThanOrEquals"] }}"{% endif %} />
+{%- if "greaterThan" in property %} greaterThan="#{{ property["greaterThan"] }}"{% endif %} />
 {%- endif %}<br />
