--- a/tests/expected_results/empty_shape.html
+++ b/tests/expected_results/empty_shape.html
@@ -34,8 +34,7 @@
         equalToCheckbox: ":input[equalToCheckbox]",
         notEqualTo: ":input[notEqualTo]",
         lessThan: ":input[lessThan]",
-        lessThanEqual: ":input[lessThanEqual]",
-        greaterThan: ":input[greaterThan]"
+        lessThanEqual: ":input[lessThanEqual]"
     });
     $(":input[equalTo]").each(function(index) {
         $(this).rules("add", {
@@ -66,14 +65,7 @@
     $(":input[lessThanEqual]").each(function(index) {
         $(this).rules("add", {
             messages: {
-                lessThanEqual: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
-            }
-        });
-    });
-    $(":input[greaterThan]").each(function(index) {
-        $(this).rules("add", {
-            messages: {
-                greaterThan: $.validator.format("Must be greater than {0}",$($(this).attr("greaterThan")).attr("label"))
+                lessThan: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
             }
         });
     });
