--- a/rendering/property.html
+++ b/rendering/property.html
@@ -33,21 +33,21 @@
     {%- elif property["datatype"] == URIs["BOOLEAN"] %} type="checkbox"
         {%- if "hasValue" in property and property["hasValue"] == True %} checked readonly disabled
         {%- elif "defaultValue" in property and property["defaultValue"] == True %} checked{%- endif %}
-        {%- if "equals" in property %} equalToCheckbox="#{{ property["equals"] }}"{% endif %}
+        {%- if "equals" in property %} equalToCheckbox="input[name={{ property["equals"] }}]"{% endif %}
     {%- else %} type="text"
         {%- if "hasValue" in property %} readonly disabled value="{{ property["hasValue"] }}" title="This value cannot be changed."
         {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
         {%- else %} value=""
         {%- endif %}
-        {%- if "equals" in property %} equalTo="#{{ property["equals"] }}"{% endif %}
+        {%- if "equals" in property %} equalTo="input[name={{ property["equals"] }}]"{% endif %}
     {%- endif %}
 {%- endif %}
 {#- Stuff that applies no matter the type of input #}
 {%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
 {%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
-{%- if "disjoint" in property %} notEqualTo="#{{ property["disjoint"] }}"{% endif %}
-{%- if "lessThan" in property %} lessThan="#{{ property["lessThan"] }}"{% endif %}
-{%- if "lessThanOrEquals" in property %} lessThanEqual="#{{ property["lessThanOrEquals"] }}"{% endif %} />
+{%- if "disjoint" in property %} notEqualTo="input[name={{ property["disjoint"] }}]"{% endif %}
+{%- if "lessThan" in property %} lessThan="input[name={{ property["lessThan"] }}]"{% endif %}
+{%- if "lessThanOrEquals" in property %} lessThanEqual="input[name={{ property["lessThanOrEquals"] }}]"{% endif %} />
 {%- endif %}
 {%- endif %}<br />
