--- a/rendering/property.html
+++ b/rendering/property.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class='entries'></div>
-  <button class='add-entry'>Add</button> <button class='remove-entry'>Remove</button>
+  <button type="button" class='add-entry'>Add</button> <button type="button" class='remove-entry'>Remove</button>
 </div>
 {%- endif %}
 <br />
