--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -1,5 +1,6 @@
 {%- if "in" in property %}
-<select disabled name="{{ property["path"] }}" id="{{ property["path"] }}">
+<select name="{{ property["path"] }}" id="{{ property["path"] }}"
+{%- if disabled==True %} disabled{% endif %}>
     {%- if "hasValue" in property %} disabled readonly>
     <option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
     {%- else %}
@@ -11,7 +12,7 @@
 {%- endif %}
 </select><br />
 {%- else %}
-<input disabled id="{{ property["path"] }}" name="{{ property["path"] }}" label="{{ property["name"] }}"
+<input id="{{ property["path"] }}" name="{{ property["path"] }}" label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
@@ -34,9 +35,10 @@
 {%- endif %}
 {#- Stuff that applies no matter the type of input #}
 {%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
-{%- if "minCount" in property and property["minCount"]|int > 0 %} required{% endif %}
+{%- if required==True %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
 {%- if "disjoint" in property %} notEqualTo="input[name={{ property["disjoint"] }}]"{% endif %}
 {%- if "lessThan" in property %} lessThan="input[name={{ property["lessThan"] }}]"{% endif %}
-{%- if "lessThanOrEquals" in property %} lessThanEqual="input[name={{ property["lessThanOrEquals"] }}]"{% endif %} />
+{%- if "lessThanOrEquals" in property %} lessThanEqual="input[name={{ property["lessThanOrEquals"] }}]"{% endif %}
+{%- if disabled==True %} disabled{% endif %}/>
 {%- endif %}
