--- a/rendering/property.html
+++ b/rendering/property.html
@@ -12,6 +12,9 @@
 {%- if "languageIn" in property %}<label for="{{ property["path"] }}"><i>Language:
     {% for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label><br />
 {%- endif %}
+{%- if "maxCount" in property and property["maxCount"] == 1 and "minCount" in property and property["minCount"] == 1 %}
+{{- input_field(property) }}
+{%- else %}
 <div>
     <div class='template' hidden data-max-entries=
     {%- if "maxCount" in property %}"{{ property["maxCount"] }}"{% endif %} data-min-entries=
@@ -29,5 +32,6 @@
 </div>
   <button type="button" class='add-entry'>Add</button> <button type="button" disabled class='remove-entry'>Remove</button>
 </div>
+{%- endif %}
 {%- endif %}
 <br />
