--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -1,8 +1,14 @@
-{%- if "hasValue" in property %}{{ property["hasValue"] }}{% endif %}
+{%- if "hasValue" in property %}
+{{ property["hasValue"] }}
+{%- endif %}
 {%- if "in" in property %}<select name="{{ property["path"] }}" id="{{ property["path"] }}"
-    {%- if disabled==True %} disabled{% endif %}>
+    {%- if disabled==True %} disabled{% endif %}
+    {%- if "equals" in property %} equalTo="input[name={{ property["equals"] }}]"{% endif %}
+    {%- if "disjoint" in property %} notEqualTo="input[name={{ property["disjoint"] }}]"{% endif %}
+    {%- if "lessThan" in property %} lessThan="input[name={{ property["lessThan"] }}]"{% endif %}
+    {%- if "lessThanOrEquals" in property %} lessThanEqual="input[name={{ property["lessThanorEquals"] }}]"{% endif %}
     {%- if "hasValue" in property %} hidden><option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
-    {%- else %}
+    {%- else %}>
         {%- for option in property["in"] %}<option value="{{ option }}"
             {%- if "defaultValue" in property and property["defaultValue"] == option %} selected{% endif %}>
             {{- option }}</option>
