Each property now has a number ID Pair property constraints linked using number ID Preparation for form submission

--- a/rendering/composite_property.html
+++ b/rendering/composite_property.html
@@ -2,12 +2,12 @@
 {%- include "property.html" %}
 {%- endmacro -%}
 
-<fieldset id="{{ property["path"] }}">
+<fieldset id="{{ property["id"] }}">
     <legend>{{ property["name"] }}</legend>
     {%- if "description" in property %}
-    <label for="{{ property["path"] }}"><i>{{ property["description"] }}</i></label><br />
+    <label for="{{ property["id"] }}"><i>{{ property["description"] }}</i></label><br />
     {%- endif %}
     {%- for property in property["property"] %}
-    {{ display_property(property)|indent(4) }}
+        {{- display_property(property)|indent(4) }}
     {%- endfor %}
 </fieldset>
