--- a/rendering/input_field.html
+++ b/rendering/input_field.html
@@ -1,7 +1,7 @@
 {%- if "hasValue" in property %}
 {{ property["hasValue"] }}
 {%- endif %}
-{%- if "in" in property %}<select name="{{ property["path"] }}" id="{{ property["path"] }}"
+{%- if "in" in property %}<select name="{{ property["id"] }}" id="{{ property["id"] }}"
     {%- if disabled==True %} disabled{% endif %}
     {%- if "equals" in property %} equalTo="input[name={{ property["equals"] }}]"{% endif %}
     {%- if "disjoint" in property %} notEqualTo="input[name={{ property["disjoint"] }}]"{% endif %}
@@ -15,7 +15,7 @@
         {%- endfor %}
     {%- endif %}</select><br />
 {%- else %}
-<input id="{{ property["path"] }}" name="{{ property["path"] }}" label="{{ property["name"] }}"
+<input id="{{ property["id"] }}" name="{{ property["id"] }}" label="{{ property["name"] }}"
 {%- if property["path"] == URIs["EMAIL"] %} type="email"
 {%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
 {%- elif "datatype" in property %}
@@ -27,19 +27,18 @@
     {%- elif property["datatype"] == URIs["BOOLEAN"] %} type="checkbox"
         {%- if "hasValue" in property and property["hasValue"] == True %} checked hidden
         {%- elif "defaultValue" in property and property["defaultValue"] == True %} checked{%- endif %}
-        {%- if "equals" in property %} equalToCheckbox="input[name={{ property["equals"] }}]"{% endif %}
     {%- else %} type="text"
         {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
         {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
         {%- else %} value=""
         {%- endif %}
-        {%- if "equals" in property %} equalTo="input[name={{ property["equals"] }}]"{% endif %}
     {%- endif %}
 {%- endif %}
 {#- Stuff that applies no matter the type of input #}
 {%- if "pattern" in property %} title="Must match pattern: /{{ property["pattern"] }}/{{ property["flags"] }}"{% endif %}
 {%- if required==True %} required{% endif %}
 {%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
+{%- if "equals" in property %} equalTo="input[name={{ property["equals"] }}]"{% endif %}
 {%- if "disjoint" in property %} notEqualTo="input[name={{ property["disjoint"] }}]"{% endif %}
 {%- if "lessThan" in property %} lessThan="input[name={{ property["lessThan"] }}]"{% endif %}
 {%- if "lessThanOrEquals" in property %} lessThanEqual="input[name={{ property["lessThanOrEquals"] }}]"{% endif %}
