--- a/tests/expected_results/empty_shape.html
+++ b/tests/expected_results/empty_shape.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Create New Person</h1>
-    <form id="form">
+    <form method="POST" id="form">
         <input type="submit" value="Submit" />
     </form>
 </body>
@@ -15,18 +15,57 @@
 <script src="jquery-validation/jquery.validate.js"></script>
 <script src="jquery-validation/additional-methods.js"></script>
 <script>
-    $.validator.addMethod("equalToCheckbox", function(value, element, params) {
-        if ($(element).is(":checked") == $(params).is(":checked"))
-            return true;
-        return false;
+    $.validator.addMethod("equalTo", function(value, element, params) {
+        var subject_value;
+        var object_value;
+        if ($(element).attr("type") == "checkbox")
+            subject_value = $(element).is(":checked");
+        else
+            subject_value = $(element).val();
+        if ($(params).attr("type") == "checkbox")
+            object_value = $(params + ":enabled").is(":checked");
+        else
+            object_value = $(params + ":enabled").val();
+        return this.optional(element) || subject_value == object_value;
     }, "Message" );
     $.validator.addMethod("notEqualTo", function(value, element, params) {
-        if (this.optional(element) == true)
-            return true;
+        var subject_value;
+        var object_value;
         if ($(element).attr("type") == "checkbox")
-            return $(element).is(":checked") == $(params).is(":checked") ? false : true;
+            subject_value = $(element).is(":checked");
         else
-            return $(element).val() == $(params).val() ? false : true;
+            subject_value = $(element).val();
+        if ($(params).attr("type") == "checkbox")
+            object_value = $(params + ":enabled").is(":checked");
+        else
+            object_value = $(params + ":enabled").val();
+        return this.optional(element) || subject_value != object_value;
+    }, "Message" );
+    $.validator.addMethod("lessThan", function(value, element, params) {
+        var subject_value;
+        var object_value;
+        if ($(element).attr("type") == "checkbox")
+            subject_value = $(element).is(":checked");
+        else
+            subject_value = $(element).val();
+        if ($(params).attr("type") == "checkbox")
+            object_value = $(params + ":enabled").is(":checked");
+        else
+            object_value = $(params + ":enabled").val();
+        return this.optional(element) || subject_value < object_value;
+    }, "Message" );
+    $.validator.addMethod("lessThanEqual", function(value, element, params) {
+        var subject_value;
+        var object_value;
+        if ($(element).attr("type") == "checkbox")
+            subject_value = $(element).is(":checked");
+        else
+            subject_value = $(element).val();
+        if ($(params).attr("type") == "checkbox")
+            object_value = $(params + ":enabled").is(":checked");
+        else
+            object_value = $(params + ":enabled").val();
+        return this.optional(element) || subject_value <= object_value;
     }, "Message" );
     $("#form").validate({
         ignore: ":input[disabled]",
@@ -68,5 +107,28 @@
                 lessThanEqual: $.validator.format("Must be less than or equal to {0}",$($(this).attr("lessThanEqual")).attr("label"))
             }
         });
+    });
+    $('body').on('click', '.add-entry', function() {
+	    var template = $(this).parent().children('.template').clone()
+        var entries = $(this).parent().children('.entries');
+	    var max_entries = template.attr('data-max-entries');
+        var num_entries = entries.children().length;
+
+        if (num_entries >= max_entries) return;
+        $(this).parent().children('.remove-entry').removeAttr('disabled');
+        template.children().children().removeAttr('disabled');
+        $(this).parent().children('.entries').append(template.html());
+        if (num_entries + 1 == max_entries) $(this).attr('disabled', 'disabled');
+    });
+    $('body').on('click', '.remove-entry', function() {
+	    var template = $(this).parent().children('.template').clone()
+        var entries = $(this).parent().children('.entries');
+	    var min_entries = template.attr('data-min-entries');
+        var num_entries = entries.children().length;
+
+        if (num_entries <= min_entries) return;
+        $(this).parent().children('.add-entry').removeAttr('disabled');
+	    $(this).parent().children('.entries').children().last().remove();
+        if (num_entries - 1 == min_entries || num_entries - 1 <= 0) $(this).attr('disabled', 'disabled');
     });
 </script>
